--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "@types/express": "^4.17.11",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.31"
   },
   "devDependencies": {
