--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "SQUAD36",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules ./backend/src/server.ts",
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
     "@types/uuid": "^8.3.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "node": "^15.10.0",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
     "typeorm": "^0.2.31",
