--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,9 +1,10 @@
 [
     {
+        "name": "default",
         "type": "sqlite",
         "database": "backend/src/database/database.sqlite",
         "entities": [
-            "backend/src/models/**/*.ts"
+            "backend/src/models/**/*.{ts, js}"
         ],
         "migrations": [
             "backend/src/database/migrations/*.ts"
