--- a/ormconfig.json
+++ b/ormconfig.json
@@ -7,7 +7,7 @@
             "backend/src/models/**/*.{ts, js}"
         ],
         "migrations": [
-            "backend/src/database/migrations/*.ts"
+            "backend/src/database/migrations/*.{ts, js}"
         ],
         "logging": "true",
         "cli": {
