--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/express": "^4.17.11",
     "@types/uuid": "^8.3.0",
+    "axios": "^0.21.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "node": "^15.10.0",
