--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "author": "SQUAD36",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules ./backend/src/server.ts",
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules ./server.ts",
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "@types/express": "^4.17.11",
     "@types/uuid": "^8.3.0",
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "node": "^15.10.0",
